<resources>
    <string name="app_name">AppIncuBar</string>
    <string name="incubar">IncuBar</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cambiar_contrase_aa">Cambiar contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="cambiar_contrase_aaa">Cambiar contraseña</string>
    <string name="home">home</string>
    <string name="dias">dias</string>
    <string name="temperatura">temperatura</string>
    <string name="humedad">humedad</string>
    <string name="usuario">usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="diass">Dias</string>
    <string name="temperaturaa">Temperatura</string>
    <string name="humedadd">Humedad</string>
    <string name="usuarioo">Perfil de Usuario</string>
    <string name="retroceder">retroceder</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="atr_s">Atrás</string>
    <string name="bienvenido_a_incubar_tu_incubadora_inteligente">Bienvenido a IncuBar, tu Incubadora Inteligente</string>
    <string name="info_home">Monitorea y ajusta los parámetros de tu incubadora en tiempo real. Controla la temperatura, humedad y días de incubación para obtener los mejores resultados.</string>
    <string name="d_as">Días</string>
    <string name="ingresa_tu_incubadora_aqu">Ingresa tu incubadora aquí</string>
    <string name="selecciona_tu_incubadora">Selecciona tu incubadora</string>
    <string name="ingresar_incubadora">Ingresar Incubadora</string>
    <string name="nombre_incubadora">Nombre Incubadora</string>
    <string name="dias_que_lleva_la_incubadora">Dias que lleva la Incubadora</string>
    <string name="nombre">Nombre</string>
    <string name="resgistrar_nueva_incubadora">Registrar nueva incubadora</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="guardar">Guardar</string>
    <string name="ingresa_una_nueva_incubadora_a_tu_lista_completando_los_siguientes_campos">Ingresa una nueva incubadora a tu lista completando los siguientes campos</string>
    <string name="agregar_incubadora">Agregar Incubadora</string>
    <string name="ver_incubadoras">Ver incubadoras</string>
    <string name="ver">Ver</string>
    <string name="listado_de_incubadoras">Listado de incubadoras</string>
    <string name="incubadora">Incubadoras</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="sorry">No es posible previsualizar estos datos, espere una nueva actualización... Disculpe las molestias.</string>
</resources>