<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.HomeFragment"
    android:paddingHorizontal="10dp"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="16dp"
        android:titleTextColor="@android:color/white"
        app:title="IncuBar"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/didacticgothic"
        android:paddingTop="100dp"
        android:text="@string/bienvenido_a_incubar_tu_incubadora_inteligente"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/didacticgothic"
        android:text="@string/info_home"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_tu_incubadora_aqu"
        android:paddingTop="500dp"
        android:textSize="20sp"
        android:fontFamily="@font/didacticgothic"
        android:textAlignment="center" />

    <!-- Botón para redirigir a la actividad CRUD de incubadora -->
    <Button
        android:id="@+id/btnAddIncubator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_incubadora"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:padding="10dp"
        android:backgroundTint="@color/fondo3"
        android:textColor="@android:color/white"
        android:fontFamily="@font/didacticgothic"
        android:textSize="18sp" />



</FrameLayout>
