<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crud_incubadora"
    android:paddingHorizontal="10dp"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/incubar"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/resgistrar_nueva_incubadora"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/didacticgothic"
        />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_una_nueva_incubadora_a_tu_lista_completando_los_siguientes_campos"
        android:fontFamily="@font/didacticgothic"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitulo"
        android:background="@drawable/border_radius"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreIncubadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre"
        app:boxBackgroundColor="@color/blancofondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreIncubadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDiasIncubadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/diass"
        app:boxBackgroundColor="@color/blancofondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombreIncubadora"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDiasIncubadora"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTemperaturaIncubadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/temperaturaa"
        app:boxBackgroundColor="@color/blancofondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDiasIncubadora"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTemperaturaIncubadora"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHumedadIncubadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/humedadd"
        app:boxBackgroundColor="@color/blancofondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilTemperaturaIncubadora"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHumedadIncubadora"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuarioIncubadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/nombre_de_usuario"
        app:boxBackgroundColor="@color/blancofondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilHumedadIncubadora"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuarioIncubadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardarIncubadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:backgroundTint="#F2F2F2"
        android:fontFamily="@font/didacticgothic"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUsuarioIncubadora"
        app:cornerRadius="8dp"
        app:iconPadding="8dp"
        app:iconGravity="textStart"
        app:rippleColor="@color/black"
        app:strokeColor="@color/blancofondo"
        app:strokeWidth="0dp"/>

    <TextView
        android:id="@+id/tvVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_incubadoras"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:fontFamily="@font/didacticgothic"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarIncubadora"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:backgroundTint="@color/fondo3"
        android:textColor="@android:color/white"
        android:fontFamily="@font/didacticgothic"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvVer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />


</androidx.constraintlayout.widget.ConstraintLayout>