<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarPassActivity"
    android:paddingHorizontal="10dp"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/retroceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/txv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        android:background="@drawable/border_radius"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atr_s"
            android:textSize="20sp"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_contrase_aa"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/didacticgothic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContraActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/contrase_a_actual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_pass"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/blancofondo"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContraActual"
                android:paddingStart="50dp"
                android:inputType="textPassword"
                android:fontFamily="@font/didacticgothic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/contrase_a_nueva"
            app:boxBackgroundColor="@color/blancofondo"
            app:layout_constraintTop_toBottomOf="@id/tilContraActual"
            app:startIconDrawable="@drawable/ic_pass"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                android:paddingStart="50dp"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:fontFamily="@font/didacticgothic"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:boxBackgroundColor="@color/blancofondo"
            android:hint="@string/confirmar_contrase_a"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:startIconDrawable="@drawable/ic_pass"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusBottomEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword2"
                android:paddingStart="50dp"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:fontFamily="@font/didacticgothic"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCambiarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_contrase_aaa"
            android:textColor="@color/black"
            android:backgroundTint="#F2F2F2"
            android:fontFamily="@font/didacticgothic"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword2"
            app:cornerRadius="8dp"
            app:iconPadding="8dp"
            app:iconGravity="textStart"
            app:rippleColor="@color/black"
            app:strokeColor="@color/blancofondo"
            app:strokeWidth="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>